added skills, contact section to the application

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                   <li><a class="dropdown-item" href="#">Portfolio Three</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
+              </li> -->
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -58,12 +58,12 @@
         <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/kanika-aggarwal-46028b46/" role="button">Learn more</a>
       </div>
 
-        <!-- Grid Cards Bootstrap code -->
+        <!-- Grid Cards Bootstrap code start-->
       
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
               <div class="card">
-                <img src="./images/02-portfolio-1.jpg" class="card-img-top" alt="...">
+                <img src="./images/02-portfolio-1.jpg" class="card-img-top" alt="Portfolio One">
                 <div class="card-body">
                   <h5 class="card-title">LED Wall</h5>
                   <p class="card-text">Node/IoT</p>
@@ -73,7 +73,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="./images/02-portfolio-2.jpg" class="card-img-top" alt="...">
+                <img src="./images/02-portfolio-2.jpg" class="card-img-top" alt="Portfolio Two">
                 <div class="card-body">
                   <h5 class="card-title">Calculator</h5>
                   <p class="card-text">React/JavaScript/CSS</p>
@@ -83,7 +83,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="./images/02-portfolio-3.jpg" class="card-img-top" alt="...">
+                <img src="./images/02-portfolio-3.jpg" class="card-img-top" alt="Portfolio Three">
                 <div class="card-body">
                   <h5 class="card-title">Pastel Puzzels</h5>
                   <p class="card-text">Mern Stack</p>
@@ -93,7 +93,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="./images/02-portfolio-4.jpg" class="card-img-top" alt="...">
+                <img src="./images/02-portfolio-4.jpg" class="card-img-top" alt="Portfolio Four">
                 <div class="card-body">
                   <h5 class="card-title">Run Buddy</h5>
                   <p class="card-text">HTML/CSS</p>
@@ -102,6 +102,47 @@
               </div>
             </div>
           </div>
+        <!-- Grid Cards Bootstrap code end-->
+          <br>
 
+        <!-- Skillset section start -->
+          <h2>Skillset</h2>
+          <p class="d-inline-flex gap-1">
+  <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">HTML</a>
+  <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">CSS</button>
+  <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">JavaScript</button>
+  <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">React</button>
+  <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Git</button></p>
+<div class="row">
+  <div class="col">
+    <div class="collapse multi-collapse" id="multiCollapseExample1">
+      <div class="card card-body">
+        Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="collapse multi-collapse" id="multiCollapseExample2">
+      <div class="card card-body">
+        Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Contact Me Section starts -->
+<br>
+          <h2>Contact Me below</h2>
+          
+<div class="list-group">
+    <a href="https://www.linkedin.com/in/kanika-aggarwal-46028b46/" class="list-group-item list-group-item-action">Linkedin Profile</a>
+    <a href="#" class="list-group-item list-group-item-action">EMail - kanikaaggarwal22@gmail.com</a>
+    <a href="#" class="list-group-item list-group-item-action">Mobile - 0777684057</a>
+    <a href="https://github.com/KanikaAggarwalCode" class="list-group-item list-group-item-action">GitHub Portfolio</a>
+  </div>
+
+  <!-- Contact Me Section ends -->
+
+  
 </body>
 </html>
