--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 
     <title>Bootstrap Template</title>
   </head>
@@ -25,7 +27,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.linkedin.com/in/kanika-aggarwal-46028b46/">LinkedIn Link</a>
+                <a class="nav-link text-primary" href="https://www.linkedin.com/in/kanika-aggarwal-46028b46/">LinkedIn Link</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -34,7 +36,6 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="https://www.google.co.uk/">Portfolio One</a></li>
                   <li><a class="dropdown-item" href="#">Portfolio Two</a></li>
-                  <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Portfolio Three</a></li>
                 </ul>
               </li>
@@ -50,20 +51,28 @@
         </div>
       </nav>
         <!-- Jumbotron code -->
-      <div class="container-fluid bg-light p-5">
-        <h1 class="display-4">Kanika Aggarwal</h1>
-        <p class="lead">A new web developer is work is progress</p>
-        <hr class="my-4">
-        <p>MBA (Finance), B. Tech having 7+ years of experience in Technology Strategy,  Product Development, Digital Transformation, Business Analysis with solution  specializing in Finance/Banking domains</p>
-        <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/kanika-aggarwal-46028b46/" role="button">Learn more</a>
-      </div>
 
-        <!-- Grid Cards Bootstrap code start-->
+      <div class="container-fluid bg-dark text-white p-5">
+        <div class="row">
+          <div class="col-md-8">
+            <h1 class="display-4 font-weight-bold" >Kanika Aggarwal</h1>
+            <p class="lead">A new web developer is making progress</p>
+            <hr class="my-4">
+            <p>MBA (Finance), B. Tech having 7+ years of experience in Technology Strategy, Product Development, Digital Transformation, Business Analysis with solution specializing in Finance/Banking domains</p>
+            <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/kanika-aggarwal-46028b46/" role="button">Learn more</a>
+          </div>
+          <div class="col-md-4">
+            <img class="img-fluid" src="./images/02-hero-bg.jpg" alt="Profile image">
+          </div>
+        </div>
+       </div>
+
+      <!-- Grid Cards Bootstrap code start-->
       
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
               <div class="card">
-                <img src="./images/02-portfolio-1.jpg" class="card-img-top" alt="Portfolio One">
+                <img src="./images/02-portfolio-1.jpg" class="card-img-top project-img" alt="Portfolio One">
                 <div class="card-body">
                   <h5 class="card-title">LED Wall</h5>
                   <p class="card-text">Node/IoT</p>
@@ -97,7 +106,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Run Buddy</h5>
                   <p class="card-text">HTML/CSS</p>
-                  <a href="https://www.google.co.uk/">Work Portfolio FOur</a>
+                  <a href="https://www.google.co.uk/">Work Portfolio Four</a>
                 </div>
               </div>
             </div>
@@ -135,10 +144,10 @@
           <h2>Contact Me below</h2>
           
 <div class="list-group">
-    <a href="https://www.linkedin.com/in/kanika-aggarwal-46028b46/" class="list-group-item list-group-item-action">Linkedin Profile</a>
+    <a href="https://www.linkedin.com/in/kanika-aggarwal-46028b46/" class="list-group-item list-group-item-action text-primary text-decoration-underline">Linkedin Profile</a>
     <a href="#" class="list-group-item list-group-item-action">EMail - kanikaaggarwal22@gmail.com</a>
     <a href="#" class="list-group-item list-group-item-action">Mobile - 0777684057</a>
-    <a href="https://github.com/KanikaAggarwalCode" class="list-group-item list-group-item-action">GitHub Portfolio</a>
+    <a href="https://github.com/KanikaAggarwalCode" class="list-group-item list-group-item-action text-primary text-decoration-underline">GitHub Portfolio</a>
   </div>
 
   <!-- Contact Me Section ends -->
